...
        }
      }

      Button {
        showPersonEditor = true
      } label: {
        Label("Create new person", systemImage: "plus")
      }
    }
    .sheet(isPresented: $showPersonEditor) {
      PersonEditor(newlyCreated: $newlyCreatedPerson)
    }
    .onChange(of: newlyCreatedPerson) { _, person in
...
